--- a/build.gradle
+++ b/build.gradle
@@ -24,37 +24,49 @@ allprojects {
     }
 }
 
-//subprojects {
-//    afterEvaluate {project ->
-//        if (project.hasProperty("android")) {
-//            android {
-//                compileSdk 33
-//
-//                defaultConfig {
-//                    minSdk 24
-//                    targetSdk 33
-//
-//                    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-//                    consumerProguardFiles "consumer-rules.pro"
-//                }
-//
-//                buildTypes {
-//                    release {
-//                        minifyEnabled false
-//                        proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-//                    }
-//                }
-//                compileOptions {
-//                    sourceCompatibility JavaVersion.VERSION_1_8
-//                    targetCompatibility JavaVersion.VERSION_1_8
-//                }
-//                kotlinOptions {
-//                    jvmTarget = '1.8'
-//                }
-//            }
-//        }
-//    }
-//}
+subprojects {
+    afterEvaluate { project ->
+        if (project.hasProperty("android")) {
+
+            android {
+                compileSdk 33
+
+                defaultConfig {
+                    minSdk 24
+                    targetSdk 33
+                    versionCode 1
+                    versionName "1.0"
+                    multiDexEnabled true
+
+                    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+                    consumerProguardFiles "consumer-rules.pro"
+                }
+
+                buildTypes {
+                    release {
+                        minifyEnabled false
+                        proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+                        manifestPlaceholders.usesCleartextTraffic = false
+                        buildConfigField "String", "BASE_URL", '"https://run.mocky.io/v3"'
+                    }
+                    debug {
+                        manifestPlaceholders.usesCleartextTraffic = true
+                        buildConfigField "String", "BASE_URL", '"https://run.mocky.io/v3"'
+                    }
+                }
+
+                compileOptions {
+                    sourceCompatibility JavaVersion.VERSION_1_8
+                    targetCompatibility JavaVersion.VERSION_1_8
+                }
+
+                kotlinOptions {
+                    jvmTarget = '1.8'
+                }
+            }
+        }
+    }
+}
 
 ext.core = '1.9.0'
 ext.appcompat = '1.5.1'
@@ -70,7 +82,6 @@ ext.okhttplogging = '4.10.0'
 ext.coroutines = '1.6.4'
 ext.play_services_base = '18.1.0'
 ext.play_services_location = '17.0.0'
-ext.paging = '3.1.0'
 ext.glide = '4.14.1'
 ext.gson = '2.9.0'
 ext.play_services_location = '17.0.0'
@@ -78,7 +89,6 @@ ext.desugar = '1.2.2'
 ext.junit = "4.13.2"
 ext.ext_junit = '1.1.3'
 ext.espresso_core = '3.4.0'
-
 
 task clean(type: Delete) {
     delete rootProject.buildDir
